--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,6 @@ body {
 .nav-container {
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.05);
 }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
